@@ -6,14 +6,14 @@ DIST kipi-plugins-0.1.0-rc1.tar.bz2 3609994 RMD160 ff3a62876970c6394a5ef6ab18050
 DIST kipi-plugins-0.1.4.tar.bz2 8529867 RMD160 bc8b6d0d9bc8b30afbaf5ac5ccbc4862aa3a80e2 SHA1 53d3609a257dfc0e429681438c60486cf4815fc6 SHA256 eb7ceed6eb6893ccabee1aebf5c08379199a96eade2886daf54445664c786d53
 DIST kipi-plugins-0.1.5.tar.bz2 8874079 RMD160 7dca88ebb3689347a798db86a616ea89eb3968b6 SHA1 889ccc177ac4200a8b9b4c94688757e2cb99cc11 SHA256 da488c9d7778fb251805626b9b724d8196531e4a56dc01b6b02be80f70c7a14e
 EBUILD kipi-plugins-0.1.0_rc1.ebuild 1140 RMD160 5fae5d7b380782ed3d47f8a631319775a35156b0 SHA1 394a018d75fdcf201614fd9df17b230fca95c918 SHA256 f184c36b42cb99ee0911d707394352381e49b3929b2ce8394ff84c148cca171c
-EBUILD kipi-plugins-0.1.4-r1.ebuild 1533 RMD160 968669f7b76b6d9758e54d3331c2fde331f0d05b SHA1 5877dfb4fa3ffc4352d972b9097b131f2054fa75 SHA256 0a138055dbe8c8e0085ca43761dc1287f27c4025be4b31761a30f7ae85ce5e04
-EBUILD kipi-plugins-0.1.5.ebuild 1666 RMD160 d43750be5656fe1589f23766db0370d057ea2b44 SHA1 04d884aff354ffd16f70ac4e36a3b69a44b74bc6 SHA256 2462b1fd7a7561f5f8089eb843362bc12eab5359321f94eda161ae80e163ccb7
-MISC ChangeLog 6413 RMD160 9b0a2e2ae67dc2d90c6c5bc41251a07c2bc82bd8 SHA1 dae70bdf77e3bfff0da0c9f874875b3d5b2df354 SHA256 e67d83c999331335f60305ddbfee0d971f992b6657a01b4023a1117d6b99d933
+EBUILD kipi-plugins-0.1.4-r1.ebuild 1535 RMD160 8916ed3420b0c730ad3877c8a31fccd22b74991a SHA1 3bbe3fa37e894d8facea887b7b64962e96863351 SHA256 dc899f17121b0df0c9a3b01c52c91917106d5ba109f71e5301e582148bd9a1ac
+EBUILD kipi-plugins-0.1.5.ebuild 1668 RMD160 1a6527c9f866fc881afcffd3b03c219224b7c78f SHA1 724078c1b7c29ea6defa3e084204f4fd257e7268 SHA256 26856a7b272ba36c2ba395f9205d73c028ba1c6c27ec392cb17b834c1c05b7ac
+MISC ChangeLog 6545 RMD160 162d02bd093d979c217c763b264b372e3be3e5e4 SHA1 7d7ca286944081a51b922c3dbd9803dedf80b7a9 SHA256 78dcbdb6bb63e4edb60e9006c1eb3459b21d25d419cc8d9272a25a4f06cb5fa8
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkg2e0oACgkQNQqtfCuFneOjIACfQ2CazvysjGq18ISBV5Ks4RYK
-/YIAn2uslGjdwhipJFe2ToK3QnuD+koa
-=qzjz
+iEYEARECAAYFAkg2fAEACgkQNQqtfCuFneOoYQCfQ+ygHczAs1AFS4f7Rmgw5ytk
+oLkAoIkMae8+ZzcXNriplVd1Yde15vlC
+=JZOx
 -----END PGP SIGNATURE-----
