@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/kipi-plugins
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/kipi-plugins/ChangeLog,v 1.34 2008/05/23 08:07:18 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/kipi-plugins/ChangeLog,v 1.35 2008/05/23 08:10:33 opfer Exp $
+
+  23 May 2008; Christian Faulhammer <opfer@gentoo.org>
+  kipi-plugins-0.1.4-r1.ebuild, kipi-plugins-0.1.5.ebuild:
+  quote variable
 
   23 May 2008; Christian Faulhammer <opfer@gentoo.org>
   kipi-plugins-0.1.4-r1.ebuild:
